--- a/style.css
+++ b/style.css
@@ -86,8 +86,6 @@ body {
   box-shadow: 0 10px 30px rgba(0,0,0,0.15);
   padding: 20px;
   box-sizing: border-box;
-  position: relative;
-  top: 10px;
 
   overflow-y: auto;   /* ← スクロール担当 */
 }
@@ -116,7 +114,7 @@ body {
 button {
   font-size: 18px;
   padding: 10px 20px;
-  margin: 0 10px;
+  margin: 10px 10px 0 10px;
 }
 
 /* ===== スマホ対応 ===== */
