--- a/style.css
+++ b/style.css
@@ -115,8 +115,6 @@ button {
   font-size: 18px;
   padding: 10px 20px;
   margin:　0 10px;
-  position: relative;
-  top: 10px;
 }
 
 /* ===== スマホ対応 ===== */
@@ -163,6 +161,23 @@ button {
     height: 36px;
   }
 
+  /* スマホ用：スライダー拡大＋位置補正 */
+  input[type="range"] {
+    height: 36px;
+  }
+  
+  input[type="range"]::-webkit-slider-runnable-track {
+    height: 12px;
+  }
+  
+  input[type="range"]::-webkit-slider-thumb {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    margin-top: -12px;   /* ←ズレ補正の本体 */
+    -webkit-appearance: none;
+  }
+
 
 }
 
@@ -179,6 +194,8 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 50%;
   background: #333;
   cursor: pointer;
+
+  margin-top: -9px;
 }
 
 /* レール（溝） */
@@ -198,19 +215,4 @@ input[type="range"]::-moz-range-thumb {
 input[type="range"]::-moz-range-track {
   height: 10px;
 }
-/* スマホ用：スライダー拡大＋位置補正 */
-input[type="range"] {
-  height: 36px;
-}
 
-input[type="range"]::-webkit-slider-runnable-track {
-  height: 12px;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  margin-top: -12px;   /* ←ズレ補正の本体 */
-  -webkit-appearance: none;
-}
