--- a/style.css
+++ b/style.css
@@ -180,10 +180,19 @@ input[type="range"] { height: 40px; border-radius:20px; }
 .modal.large .modal-content { width: 90%; max-width: 900px; max-height: 80vh; overflow:auto; }
 .modal-content {
   background: white;
-  padding: 18px;
+  padding: 40px;
   border-radius: 16px;
+  gap: 10px;
   width: 480px;
   box-shadow: 0 20px 60px rgba(2,6,23,0.2);
+}
+.modal-textbox{
+  width: 480px;
+  height: 50px;
+  resize: none;
+  font-size: 15px;
+  border-radius: 15px;
+  padding: 10px;
 }
 .modal-content h3 { margin-top:0; }
 
