--- a/style.css
+++ b/style.css
@@ -153,9 +153,9 @@ body {
 
 /* コントロールボタン */
 .controls { margin-top:12px; display:flex; gap:12px; justify-content:center; }
-button.rounded { background:#fff; margin-top:15px;border:none; padding:10px 18px; border-radius:14px; box-shadow:0 8px 20px rgba(16,24,40,0.06); cursor:pointer; font-size:16px; }
+button.rounded { background:#fff; border:none; padding:10px 18px; border-radius:14px; box-shadow:0 8px 20px rgba(16,24,40,0.06); cursor:pointer; font-size:16px; }
 button.rounded:hover { transform: translateY(-2px); }
-button.rounded2 { background:#fff; margin-top:5px;border:none; padding:10px 18px; border-radius:14px; box-shadow:0 8px 20px rgba(16,24,40,0.06); cursor:pointer; font-size:16px; }
+button.rounded-close { position: relative; left: 180px; background:#fff; ;border:none; padding:10px 18px; border-radius:14px; box-shadow:0 8px 20px rgba(16,24,40,0.06); cursor:pointer; font-size:16px; }
 
 /* スライダー */
 input[type="range"] { height: 40px; border-radius:20px; }
@@ -195,7 +195,7 @@ input[type="range"] { height: 40px; border-radius:20px; }
 }
 .modal-select{
   border-radius:10px;
-  margin: 10px 0px 0px 10px;
+  margin: 10px 0px 10px 10px;
   padding : 10px;
 }
 .modal-textbox{
