--- a/style.css
+++ b/style.css
@@ -46,22 +46,23 @@ body {
 }
 
 /* top controls（右上） */
-#topControls { position: absolute; top: 12px; right: 140px; display:flex; gap:8px; z-index:30;}
-.icon-btn { border: none; background: #fff; padding:15px 20px; border-radius:12px; box-shadow:0 6px 18px rgba(0,0,0,0.08); cursor:pointer; font-size:16px; }
+#topControls { position: absolute; top: 20px; right: 200px; display:flex; gap:8px; z-index:30;}
+.icon-btn { border: none; background: #fff; padding:15px 25px; border-radius:20px; box-shadow:0 6px 18px rgba(0,0,0,0.08); cursor:pointer; font-size:16px; }
 .icon-btn:hover { transform: translateY(-2px); }
 
 
 /* 保存ボタン（右上） */
 .save-btn {
   position: fixed;
-  right: 40px;
-  top: 10px;
-  background: linear-gradient(180deg,#694b3a,#5e4231);
+  right: 45px;
+  top: 15px;
+  background: #63896d;
   color: white;
-  padding: 20px 28px;
+  padding: 20px 50px;
   border: none;
-  border-radius: 20px;
+  border-radius: 30px;
   font-weight: 600;
+  font-size: 15px;
   box-shadow: 0 10px 30px rgba(3,105,161,0.18);
   cursor: pointer;
   z-index: 70;
