--- a/style.css
+++ b/style.css
@@ -351,10 +351,8 @@ input[type="range"] { height: 40px; border-radius:20px; }
     left: 0;
     width: 100%;
     height: 90px;
-    background: #161e2d2e;
-    box-shadow: 0 -4px 20px rgba(0,0,0,0.1);
+    background: transparent;
     z-index: 1000;
-
     display: flex;
     justify-content: space-around; /* 均等配置 */
     align-items: center;
